--- a/my-react-portofolio/src/components/about/about.css
+++ b/my-react-portofolio/src/components/about/about.css
@@ -37,7 +37,7 @@
   gap: 1.5rem;
 }
 
-.about__cards {
+.about__card {
   background: var(--color-bg-variant);
   border: 1px solid transparent;
   border-radius: 1rem;
@@ -46,7 +46,7 @@
   transition: var(--transition);
 }
 
-.about__cards:hover {
+.about__card:hover {
   background: transparent;
   border-color: var(--color-primary-variant);
   cursor: default;
