--- a/my-react-portofolio/src/components/services/services.css
+++ b/my-react-portofolio/src/components/services/services.css
@@ -1,6 +1,6 @@
 .services__container {
   display: grid;
-  grid-tepmlate-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 3rem;
 }
 
@@ -52,7 +52,7 @@
 
 /* For tablet (Medium devices) */
 @media screen and (max-width: 1024px) {
-  .service__container {
+  .services__container {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
   }
@@ -64,7 +64,7 @@
 
 /* For tablet (Small devices) */
 @media screen and (max-width: 600px) {
-  .service__container {
+  .services__container {
     grid-template-columns: 1fr;
     gap: 1.5rem;
   }
