--- a/my-react-portofolio/src/components/contact/contact.css
+++ b/my-react-portofolio/src/components/contact/contact.css
@@ -56,14 +56,14 @@ textarea {
 
 /* For tablet (Medium devices) */
 @media screen and (max-width: 1024px) {
-  .container-contact__container {
+  .container.contact__container {
     grid-template-columns: 1fr;
     gap: 2rem;
   }
 }
 /* For tablet (Small devices) */
 @media screen and (max-width: 600px) {
-  .container-contact__container {
+  .container.contact__container {
     width: var(--container-width-sm);
   }
 }
